--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.74.14",
+    "@react-three/drei": "9.74.14",
     "@react-three/fiber": "8.12.0",
-    "@react-three/postprocessing": "^2.14.9",
+    "@react-three/postprocessing": "2.14.9",
     "@types/three": "^0.152.1",
-    "three": "^0.153.0"
+    "three": "0.153.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
